--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "yii2 swagger",
         "yii2 api documentation generator"
     ],
+    "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
         {
@@ -17,7 +18,7 @@
     "require": {
         "php": ">=7.1.0",
         "yiisoft/yii2": "~2.0.12",
-        "zircote/swagger-php": "^2.0",
+        "zircote/swagger-php": "^4.7.8",
         "bower-asset/swagger-ui": "^3.1"
     },
     "require-dev": {
